<resources>
    <string name="facebook_app_id">351302521923822</string>
    <string name="client_id">81xi7zcbgh072i</string>
    <string name="client_secret">ZG9TQtsbIAbVQj26</string>
    <string name="app_name">Collow</string>
    <string name="enter_frist_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_minimum_three_characters">Enter Minimum three characters</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_change_password">Change Password</string>
    <string name="please_select_date_of_birth">Please Select Date of Birth.</string>
    <string name="please_select_state">Please Select State.</string>
    <string name="no_data_founds">No Records found.</string>
    <string name="no_my_activities_found">No My Activities found.</string>
    <string name="no_message_found">No Message Found in Your Inbox.</string>
    <string name="no_news_found">No News And Announcements Records found.</string>
    <string name="no_form_and_document_found">No Forms And Documents Records found.</string>
    <string name="no_polls_records_found">No Polls Records found.</string>
    <string name="no_activties_feed_found">No Community Activity Feeds Records found.</string>
    <string name="no_comments_found">No Comments Found.</string>
    <string name="no_teams_record_found">No Management Team Records Found.</string>
    <string name="no_communities_records_found">No Communities Records found.</string>
    <string name="no_admins_records_found">No Admins Records found.</string>
    <string name="no_galleries_found">No Galleries Found</string>
    <string name="no_search_result_found">No Search Results found.</string>
    <string name="no_amenities_found">No Amenities found.</string>
    <string name="no">No Records found.</string>
    <string name="no_teams_found">No Management Teams Records found.</string>
    <string name="no_classified_found">No Classifieds Records found.</string>
    <string name="write_here">Write Here</string>
    <string name="create_news_success">New And Announcement created successfully.</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_price">Enter Price</string>
    <string name="image_upload_limit_corss_message">You can not upload images more then 12.</string>
    <string name="image_upload_limit_corss_message_all_files">You can not upload files more then 12.</string>
    <string name="upload_images_at_least_one">Please upload at least one image.</string>
    <string name="create_classfied_done">Classified Post created successfully .</string>
    <string name="imrequest_sent_successfully">Your Interested request sent Successfully.</string>
    <string name="imrequest_sent_failed">Your Interested request failed please try again.</string>
    <string name="create_formsanddocuments_done">Form And Documents Post created successfully .</string>
    <string name="your_request_sent">Your request sent Successfully .</string>
    <string name="your_request_sent_failed">Your request sent failed .</string>
    <string name="price_should_be_valid">Price Should be valid.</string>
    <string name="enter_message">Message should not be empty.</string>
    <string name="event_created">Event created successfully .</string>
    <string name="event_deleted_successfully">Event Deleted Successfully.</string>
    <string name="event_updated">Event Updated successfully .</string>
    <string name="gallery_deleted_successfully">Gallery Deleted Successfully.</string>
    <string name="request_sent">Request Sent Successfully.</string>
    <string name="polls_created_successfully">Poll Created Successfully .</string>
    <string name="poll_question_not_to_be_empty">Poll Question Should be not empty .</string>
    <string name="poll_options_not_to_be_empty">Poll Option Should be not empty .</string>
    <string name="your_votes_saved_succesfully">Your vote sent successfully.</string>
    <string name="event_deleted_failed">Event Deleted failed.</string>
    <string name="gallery_deleted_failed">Gallery Deleted failed.</string>
    <string name="request_sent_failed">Request Sent Failed.</string>
    <string name="polls_created_failed">Poll Created Failed Please try again .</string>
    <string name="your_votes_saved_failed">Your vote sent failed.</string>
    <string name="following_request_failed">Following request sent failed please try again.</string>
    <string name="claim_community_request_failed">Claim Community request sent failed please try again.</string>
    <string name="create_classfied_failed">Create Classified Post failed try again .</string>
    <string name="create_gallery_failed">Create Gallery Post failed try again .</string>
    <string name="event_created_failed">New Event created failed .</string>
    <string name="event_updated_failed"> Event Update failed .</string>
    <string name="create_news_failed">Create News And Announcement failed try again .</string>
    <string name="create_formsanddocuments_failed">Forms And Documents  request failed to sent please try again.</string>
    <string name="following_request_sent">Following request sent successfully.</string>
    <string name="claim_community_request_sent">Claim Community request sent successfully.</string>
    <string name="claim_community_request_sent_failed">Claim Community request sent failed please try again.</string>
    <string name="cannot_click_claim">You cannot click this button until you will not follow the community.</string>
    <string name="loading">Loading...</string>
    <string name="something_wrong">Something wrong,please try again.</string>
    <string name="no_records_found">ohh, No data found.</string>
    <string name="internet_connection_slow">Internet connection either slow or not available.please check your network connection.</string>
    <string name="attempting">You attempted </string>
    <string name="times">Times.</string>
    <string name="retry">Retry</string>
    <string name="could_not_get_data">Couldn\'t find any content from server so please try again.</string>
    <string name="html_comming">Data came from server either in html form instead of JSON or data may came empty please try after sometimes.</string>
    <string name="interent_lost">Internet Connection Lost</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signup">Sign Up</string>
    <string name="create_an_account">By creating an account,you are aggreing to Collow\'s</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="iam_registered">Already Registered</string>
    <string name="thanks_for_signing">Thanks for Signing Up. Please check your</string>
    <string name="email_confirm">email to confirm your account</string>
    <string name="open_mailapp">OPEN MAIL APP</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create New Account</string>
    <string name="back">Back</string>
    <string name="done">Done!</string>
    <string name="search_result_empty">Please Enter Search Text.</string>
    <string name="please_enter_any_search_criteria">Please Enter Any Search Criteria.</string>
    <string name="welcom">Welcome</string>
    <string name="welcomedescription">Improving the way we communicate with our</string>
    <string name="welcome_community">community managers</string>
    <string name="get_started">GET STARTED</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="zipcode">ZIP Code</string>
    <string name="state">Select State</string>
    <string name="change_password">Change Password</string>
    <string name="dob">Date of Birth</string>
    <string name="select_home_community">Select home Community</string>
    <string name="select_your_interests">Select your Interests</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="search_state">Search State</string>
    <string name="search_">Search</string>
    <string name="more_text">Read More</string>
    <string name="select_community_type">Select Community Type</string>
    <string name="your_profile_save_successfully">Your Profile Saved Successfully.</string>
    <string name="wejust">We just sent you an email with instructions</string>
    <string name="toreset">to reset your password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enteryouremail">Enter your email below and we\'ll send you</string>
    <string name="alink">a link to reset your password</string>
    <string name="enteremail">Email Address</string>
    <string name="selectphoto">Select Images</string>
    <string name="reset">RESET</string>
    <string name="share">SHARE</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="post">My Posts</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="signout">Sign Out</string>
    <string name="my_posts">My Posts</string>
    <string name="results">Results</string>
    <string name="search_by_communtity_name">Search By Community Name...</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="team_title">Team</string>
    <string name="searched_item">Searched Item  :</string>
    <string name="feed">Feed</string>
    <string name="classified">Classified</string>
    <string name="news">News</string>
    <string name="select_team">Select Team</string>
    <string name="chat">Chat</string>
    <string name="events">Events</string>
    <string name="gallery">Gallery</string>
    <string name="polls">Polls</string>
    <string name="forms">Forms/Docs</string>
    <string name="info">Info</string>
    <string name="claim">CLAIM THIS COMMUNITY</string>
    <string name="admins">Admins</string>
    <string name="followers">Followers</string>
    <string name="feature">Features</string>
    <string name="address_units">Addresses/Units</string>
    <string name="claime_community">Claim Community</string>
    <string name="communities">Communities</string>
    <string name="inbox">Inbox</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="views">Views</string>
    <string name="booknow">BOOK NOW</string>
    <string name="cancel">Cancel</string>
    <string name="team">Team or company name</string>
    <string name="contactemail">Contact email</string>
    <string name="phonenumber">Contact phone number</string>
    <string name="street">Street</string>
    <string name="save">SAVE</string>
    <string name="description">Description</string>
    <string name="download">DOWNLOAD</string>
    <string name="document">the document</string>
    <string name="send">SEND</string>
    <string name="language">Language : English</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="about">About</string>
    <string name="starttime">Start Time</string>
    <string name="date">Date</string>
    <string name="endtime">End Time</string>
    <string name="eventlocation">Event Location</string>
    <string name="addimage">Add Image</string>
</resources>