<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingTop="80dp">

    <ImageView
        android:id="@+id/imageview_reset"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cicle_background"
        android:src="@drawable/rightarrow" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_reset"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <com.app.collow.BaseTextView
            android:id="@+id/textview_reset1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enteryouremail"
            android:textColor="@color/white" />

        <com.app.collow.BaseTextView
            android:id="@+id/textview_reset2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/alink"
            android:textColor="@color/white" />

        <com.app.collow.BaseEditText
            android:id="@+id/edittext_reset_entermail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/enteremail"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="@dimen/textsize_medium" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_transparent_background"
            android:hint="@string/reset"
            android:padding="10dp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.app.collow.BaseTextView
                android:id="@+id/textview_reset_newaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:hint="@string/create_account"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>