<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"></include>

    <ImageView
        android:id="@+id/imageview_forgetpassword"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/trueicon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_forgetpassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <com.app.collow.baseviews.BaseTextview
            android:id="@+id/textview_forgetpassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wejust"
            android:textColor="@color/white" />

        <com.app.collow.baseviews.BaseTextview
            android:id="@+id/textview_forgetpassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/toreset"
            android:textColor="@color/white" />


        <com.app.collow.baseviews.MyButtonView
            android:id="@+id/button_forgot_openmailapp"
            style="@style/mybuttonViewStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/open_mailapp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/shareicon" />

            <com.app.collow.baseviews.BaseTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/share"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/editicon" />

            <com.app.collow.baseviews.BaseTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/edit"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/deleteicon" />

            <com.app.collow.baseviews.BaseTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>